coderabbit refactoring